--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
                 <div class="hint-box">
                     <strong>🎯 Quiz Anagrammi</strong><br>
                     Ti mostro una parola, tu trovi tutti i suoi anagrammi!<br>
-                    <span style="font-size: 0.9em; color: #7f8c8d;">Per multi-parola: scrivi "parola1 parola2" o "parola1 + parola2"</span>
+                    <span style="font-size: 0.9em; color: #7f8c8d;">Scrivi un anagramma alla volta e premi Invio. Per multi-parola: "parola1 parola2" o "parola1 + parola2"</span>
                 </div>
                 
                 <div class="options">
